--- a/gb/22/9/28/n13834734.md
+++ b/gb/22/9/28/n13834734.md
@@ -27,31 +27,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9773019.md#1" target="_blank">古拉格历史博物馆 揭露斯大林红色恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/1/n11693550.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923126.md#1">【节气养生】立春怎么顺时“养生”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928876.md#1">同日出生死亡的缅甸夫妇转生双胞胎 再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923582.md#1">【人生之钥】科举落第的读书人 意外当了皇帝的老师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929192.md#1">【探索时分】美再击落3气球 多国也曾出现气球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929198.md#1">【中国禁闻】中共官媒记者贿赂土耳其灾民 造假新闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929694.md#1">【横河观点】美3天击落3气球 中共危机管控失灵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928422.md#1">王友群：习近平保一家老小性命安全怎么保？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928606.md#1">消息：中方就气球事件发声明 得到习首肯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928902.md#1">东莞发生凶杀案 一男子捅倒多人 现场惨烈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929153.md#1">大陆演员李嘉明无戏可拍 回老家摆摊卖炒面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928300.md#1">与周星驰“王不见王”？梁朝伟述2人真实交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929190.md#1">《满江红》香港票房惨淡 3天仅卖5万多港币</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928773.md#1">林志颖术后首次公开复工 自揭状态“还不错”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929227.md#1">中共宣传片《狂飙》爆丑闻 演员曾吸毒被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928807.md#1">意大利奇景：上下颠倒的无花果树</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906326.md#1">痴呆症不可逆？资深医师：1方法可延迟或预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926699.md#1">另类观光胜地 地穴能量强大的台北南港公园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928566.md#1">情人节送花 原来还有这些讲究</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928109.md#1">糖都是不好的吗？这些糖对你好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063213.md#1">【环球直击】挣钱难 大陆青年流行“反向消费”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061791.md#1">曾庆红家族企业花样年披露违约负债439亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061857.md#1">国务院部门发新提议 分析：与习想法相左</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061593.md#1">中国两个月近200万人染疫亡？分析：冰山一角</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062572.md#1">“为病重外婆冲喜” 林逸欣1年多前已结婚</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/28/n13834734.htm">台学联迎新派对 展望新学年</a></p><hr>
