--- a/gb/23/7/25/n14041458.md
+++ b/gb/23/7/25/n14041458.md
@@ -28,31 +28,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10966582.md#1" target="_blank">林辉：文革一个为妻子报仇的普通军人之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/4/n9225929.md#1" target="_blank">对中国法轮功学员被迫害的调查（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14037787.md#1">外星人的杰作？ 英国最多麦田圈地区揭晓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035772.md#1">【未解之谜】“最强穿越者”的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030745.md#1">【古道人生】为什么他知道儿子是来讨债的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035284.md#1">“相公来了”鬼怪也远避！ 阴阳两界敬重的贤相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034619.md#1">人一定能战胜天？“人定胜天”这么多年你都解释错了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041779.md#1">【秦鹏观察】处理秦刚留后手 习难咽下一口气？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041144.md#1">【热点互动】中共变笑脸 民企安全有保障？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041206.md#1">【军事热点】乌克兰已经收复一半被占领土</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040594.md#1">黑龙江体育馆坍塌已11死 顶棚违规堆放珍珠岩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040414.md#1">杜苏芮已近中台上限 气象局：20:30发布海警</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040982.md#1">马斯克辞退“蓝鸟”加速打造“X ”帝国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040507.md#1">晒与张震聚会合照 冯德伦获舒淇用三个字形容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040483.md#1">奥斯卡影帝福克斯病愈复出：去了趟地狱回来了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040837.md#1">《芭比》热映 玛格·罗比公开青涩少女照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040288.md#1">阿汤哥喜欢乔装进剧院当观众吃爆米花喝汽水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040330.md#1">李心洁阔别20年开唱 大咖艺人朋友全都来了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022904.md#1">男性缺4营养素增癌症、痴呆风险 专家建议这样补</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040311.md#1">专家：游轮上到处有监视器 惹麻烦会被关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040808.md#1">日本77岁老翁免费为台湾游客导览伊豆高原</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14039456.md#1">精神疾病病根在线粒体？哈佛教授：生酮饮食可改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040116.md#1">中医开具“换肤方3.0” 有效治疗长新冠皮肤搔痒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063213.md#1">【环球直击】挣钱难 大陆青年流行“反向消费”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061791.md#1">曾庆红家族企业花样年披露违约负债439亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061857.md#1">国务院部门发新提议 分析：与习想法相左</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061593.md#1">中国两个月近200万人染疫亡？分析：冰山一角</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062572.md#1">“为病重外婆冲喜” 林逸欣1年多前已结婚</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/25/n14041458.htm">FMG 成俄罗斯黑客最新攻击目标</a></p><hr>
