--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063424.md#1">拜登政府公布医保谈判的首批10种处方药</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063445.md#1">辩论会表态支持川普时显犹豫 德桑蒂斯解释原因</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063442.md#1">兰伯特有望出任美国务院中国事务负责人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063415.md#1">【远见快评】内外脱轨 习近平行程诡异之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062964.md#1">迎接新学年 拜登夫妇访问华府一所中学</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
