--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
